# starch

./: .gitignore  Cargo.toml  README.md  test
src/: codegen.rs  config.rs  error.rs  lib.rs  preprocess.rs  shader.rs  transpile.rs  util.rs
src/language/: codegen.rs  mod.rs  transpile.rs
src/preprocess/: matcher.rs  mod.rs
