[package]
name = "starch"
description = "Glue boilerplate code for shader subprojects."
authors = ["Tin Švagelj <tin.svagelj@live.com>"]
version = "0.1.0"
edition = "2021"

[features]
default = ["wgsl-in", "glsl-out"]
glsl = ["glsl-in", "glsl-out"]
glsl-in = ["naga/glsl-in", "naga/glsl-validate"]
glsl-out = ["naga/glsl-out"]
wgsl = ["wgsl-in", "wgsl-out"]
wgsl-in = ["naga/wgsl-in"]
wgsl-out = ["naga/wgsl-out"]
spv = ["spv-in", "spv-out"]
spv-in = ["naga/spv-in"]
spv-out = ["naga/spv-out", "byteorder"]
hlsl-out = ["naga/hlsl-out"]
msl-out = [ "naga/msl-out"]
all-formats = ["glsl", "wgsl", "spv", "hlsl-out", "msl-out"]
config-file = ["serde", "naga/serialize", "naga/deserialize"]

[dependencies]
naga = "0.8"
regex = "1"
byteorder = { version = "1.4", optional = true }

serde = { version = "1.0", optional = true, features = [ "derive" ] }

thiserror = "1.0"
log = "0.4"

lazy_static = "1.4"

[dev-dependencies]
env_logger = "0.9"
